fix bug category
