# packages/api-blog/src/Http/Controllers/Api/CategoryController.php
@@ -125,15 +125,20 @@ class CategoryController extends Controller
      *            @OA\Property(property="meta_keywords", type="string", format="string", example="Test Post Meta Keywords"),
      *            @OA\Property(property="meta_language", type="string", format="string", example="Test Post Meta Language"),
      *            @OA\Property(property="tweet_text", type="string", format="string", example="Test Post Tweet Text"),
-     *            @OA\Property(property="category_type", type="string", format="string", example="Test Category Type"),
+     *            @OA\Property(property="category_type", type="string", format="string", example="article"),
      *            @OA\Property(property="menu_order", type="integer", format="integer", example="1"),
-     *            @OA\Property(property="pic_small", type="string", format="string", example="Test Post Pic Small"),
-     *            @OA\Property(property="pic_large", type="string", format="string", example="Test Post Pic Large"),
      *            @OA\Property(property="priority", type="integer", format="integer", example="100"),
      *            @OA\Property(property="menu_status", type="boolean", format="boolean", example="true"),
      *            @OA\Property(property="visible_index_status", type="boolean", format="boolean", example="true"),
      *            @OA\Property(property="parent_id", type="integer", format="integer", example="1"),
      *         ),
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(description="file to upload", property="pic_small", type="file", format="file"),
+     *                 @OA\Property(description="file to upload", property="pic_large", type="file", format="file"),
+     *             )
+     *         )
      *      ),
      *      @OA\Response(
      *          response="200",
@@ -246,7 +251,7 @@ class CategoryController extends Controller
      *                         "meta_language": "meta_language post",
      *                         "tweet_text": "tweet_text post",
      *                         "tweet_text": "tweet_text post",
-     *                         "category_type": "category type",
+     *                         "category_type": "article",
      *                         "menu_order": "menu_order category",
      *                         "priority": "133",
      *                         "pic_small": "pic_small post",
@@ -288,16 +293,31 @@ class CategoryController extends Controller
      *      @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *            required={"id"},
+     *            required={"id","category_type"},
      *            @OA\Property(property="id", type="integer", format="integer", example="2"),
+     *            @OA\Property(property="name", type="string", format="string", example="Test Category Name"),
      *            @OA\Property(property="title", type="string", format="string", example="Test Article Title"),
      *            @OA\Property(property="slug", type="string", format="string", example="test-article-title"),
      *            @OA\Property(property="subject", type="string", format="string", example="Test Article Subject"),
      *            @OA\Property(property="description", type="string", format="string", example="Test Article Description"),
-     *            @OA\Property(property="pic-small", type="string", format="string", example="Test Article Pic Small"),
-     *            @OA\Property(property="pic-large", type="string", format="string", example="Test Article Pic Large"),
+     *            @OA\Property(property="meta_description", type="string", format="string", example="Test Article Meta Description"),
+     *            @OA\Property(property="meta_keywords", type="string", format="string", example="Test Article Meta Keywords"),
+     *            @OA\Property(property="meta_language", type="string", format="string", example="Test Article Meta Language"),
+     *            @OA\Property(property="tweet_text", type="string", format="string", example="Test Article Tweet Text"),
+     *            @OA\Property(property="category_type", type="string", format="string", example="article"),
+     *            @OA\Property(property="menu_order", type="integer", format="integer", example="1"),
+     *            @OA\Property(property="priority", type="integer", format="integer", example="1"),
+     *            @OA\Property(property="menu_status", type="boolean", format="boolean", example="true"),
+     *            @OA\Property(property="visible_index_status", type="boolean", format="boolean", example="true"),
      *            @OA\Property(property="parent_id", type="integer", format="integer", example="1"),
      *         ),
+     *         @OA\MediaType(
+     *             mediaType="multipart/form-data",
+     *             @OA\Schema(
+     *                 @OA\Property(description="file to upload", property="pic_small", type="file", format="file"),
+     *                 @OA\Property(description="file to upload", property="pic_large", type="file", format="file"),
+     *             )
+     *         )
      *      ),
      *      @OA\Response(
      *          response="200",
